# tg_bot

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  config.py  database.py  utils.py
app/database/: __init__.py  connection.py  models.py
