[project]
name = "tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coloredlogs>=15.0.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "pytelegrambotapi>=4.28.0",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.24",
]
